// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/endpoints.js #getEndpoint() should return the EU es_ES endpoint 1`] = `
Object {
  "hostname": "https://eu.api.battle.net",
  "locale": "es_ES",
}
`;

exports[`lib/endpoints.js #getEndpoint() should return the SEA endpoint 1`] = `
Object {
  "hostname": "https://sea.api.battle.net",
  "locale": "en_US",
}
`;

exports[`lib/endpoints.js #getEndpoint() should return the US endpoint 1`] = `
Object {
  "hostname": "https://us.api.battle.net",
  "locale": "en_US",
}
`;

exports[`lib/endpoints.js #getEndpoint() should return the default endpoint 1`] = `
Object {
  "hostname": "https://us.api.battle.net",
  "locale": "en_US",
}
`;
